# auth

./: CHANGELOG.md  LICENSE  README.md  auth.cabal
associated/: Auth.hs
auth/: Auth.hsig
common/: Hash.hs
lying/: Auth.hs
old/auth/: Auth.hsig
old/prover/: Prover.hs
old/src/: Auth.hs
prover/: Prover.hs
src/: Auth.hs
src/Control/Monad/: Auth.hs
verifier/: Verifier.hs
