cabal-version: 2.0
name:          auth
category:      Data Structures
version:       0
license:       BSD2
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/auth/
bug-reports:   http://github.com/ekmett/auth/issues
copyright:     Copyright (C) 2018 Edward A. Kmett
synopsis:      Authenticated data structures
description:   Authenticated data structures.
build-type:    Simple
extra-source-files:

source-repository head
  type: git
  location: git://github.com/ekmett/auth.git

library common
  default-language: Haskell2010
  hs-source-dirs: common
  build-depends: base, utf8-string, cryptohash-sha1
  exposed-modules: Hash

library prover
  default-language: Haskell2010
  build-depends: base, common, transformers, constraints
  hs-source-dirs: prover
  exposed-modules: Prover

library verifier
  default-language: Haskell2010
  build-depends: base, common, transformers, constraints
  hs-source-dirs: verifier
  exposed-modules: Verifier

library
  default-language: Haskell2010
  build-depends: base, utf8-string, cryptohash-sha1, base16-bytestring, transformers, constraints
  exposed-modules: Auth
  hs-source-dirs: src
