cabal-version: 2.0
name:          auth
category:      Data Structures
version:       0
license:       BSD2
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/auth/
bug-reports:   http://github.com/ekmett/auth/issues
copyright:     Copyright (C) 2018 Edward A. Kmett
synopsis:      Authenticated data structures
description:   Authenticated data structures as a library
build-type:    Simple
extra-source-files:
  README.md
  CHANGELOG.md
  .gitignore

source-repository head
  type: git
  location: git://github.com/ekmett/auth.git

library
  default-language: Haskell2010
  build-depends:
    base >= 4.11 && < 5,
    base16-bytestring >= 0.1.1.6 && < 0.2,
    cryptohash-sha1 >= 0.11.100.1 && < 0.12,
    transformers >= 0.5 && < 0.6,
    utf8-string >= 1.0 && < 1.1
  exposed-modules: Control.Monad.Auth
  hs-source-dirs: src
